# argiloteca-drx-panel

./: .gitignore  EXPLICACAO_PAINEL_DRX_COMPARACAO.md  README.md  README_DRX_PANEL.md  REPOSITORY_SCOPE.md  enviar_alteracoes_atuais_argiloteca_drx.sh  enviar_atualizacoes_argiloteca_drx_panel.sh  enviar_git_443_argiloteca_drx_panel.sh  enviar_painel_para_linux_192_168_0_16.sh  indexar_cif_cod_argiloteca.sh  iniciar_argiloteca.sh  linux_baixar_e_atualizar_painel_argiloteca.sh  rodar_drx_diffractgpt_publicar_argiloteca.sh  treinar_difract_ngc_argiloteca.sh
argiloteca/argiloteca_custom/: .gitkeep  __init__.py  app.py  mineralogia.py  pyproject.toml  scientific_traceability.py  setup.cfg  setup.py  traceability.py
argiloteca/argiloteca_custom/argiloteca/: __init__.py  ext.py  ext_api.py  mineralogia.py  views.py  webpack.py
argiloteca/argiloteca_custom/argiloteca_drx/: __init__.py
argiloteca/argiloteca_custom/argiloteca_drx_core/: __init__.py  contracts.py  curves.py  diffractogram.py  geometry.py  knowledge.py  ngc.py  peak_detector.py  peaks.py  processing.py
argiloteca/argiloteca_custom/docs/: painel_drx_documentacao.md
argiloteca/argiloteca_custom/globals/: site.overrides  site.variables
argiloteca/argiloteca_custom/scripts/: __init__.py  batch_ngc_raw_diagnostics.py  build_cif_cod_reference_index.py  build_drx_neural_evidence_index.py  dara_external_adapter.py  dara_external_adapter.sh  detect_peaks_scipy.py  export_chapter3_geometry_knowledge.py  export_chapter7_knowledge.py  export_chapter8_mixed_layer_knowledge.py  fit_peaks_lmfit.py  (+4 more)
(+292 files in other folders)
