[metadata]
name = argiloteca

[options]
packages = find:
include_package_data = True

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.apps =
    argiloteca = argiloteca.ext:ArgilotecaUIExtension

invenio_base.api_apps =
    argiloteca = argiloteca.ext_api:ArgilotecaAPIExtension

invenio_assets.webpack =
    argiloteca_theme = argiloteca.webpack:theme